@@ -1,3 +1,9 @@
+2004-11-26  Shiro Kawai  <shiro@acm.org>
+
+	* src/kahua/server.scm (default-element-handler): recognize
+	  non-terminated HTML tags (e.g. img, br, etc) and emits empty
+	  XHTML tag (e.g. <img />) instead of <img></img>.
+
 2004-11-25  Shiro Kawai  <shiro@acm.org>
 
 	* src/kahua-admin.scm: Enabled batch execution---just give an
